[gd_scene load_steps=15 format=3 uid="uid://bxinvlkwer7sr"]

[ext_resource type="Script" uid="uid://cpt1fvolq58yt" path="res://Scripts/main_menu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://c6sl6t0nnowbp" path="res://Sprites/PaulBONK.png" id="2_mjmdf"]
[ext_resource type="Texture2D" uid="uid://b2tc35wb13a35" path="res://Sprites/Buttons/StartButton.png" id="3_t6w0q"]
[ext_resource type="Texture2D" uid="uid://cs0iehyopucby" path="res://Sprites/Buttons/EZButton.png" id="4_k8um8"]
[ext_resource type="Texture2D" uid="uid://d21eabc2oxign" path="res://Sprites/Buttons/Flashbang1.png" id="5_jex3y"]
[ext_resource type="Texture2D" uid="uid://duxtfxfwoakqe" path="res://Sprites/Buttons/EZButtonzoom.png" id="5_k8um8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jex3y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_744d7"]
texture = ExtResource("3_t6w0q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dvisc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kl3t2"]
texture = ExtResource("4_k8um8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m48tj"]
texture = ExtResource("5_jex3y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jex3y"]
texture = ExtResource("5_k8um8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ynupv"]
texture = ExtResource("4_k8um8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ab04i"]
texture = ExtResource("5_jex3y")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tt5f1")

[node name="PaulBonk" type="Sprite2D" parent="."]
position = Vector2(576, 323)
texture = ExtResource("2_mjmdf")

[node name="ButtonManager" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartGame" type="Button" parent="ButtonManager"]
material = SubResource("CanvasItemMaterial_jex3y")
layout_mode = 0
offset_left = 407.0
offset_top = 537.0
offset_right = 750.0
offset_bottom = 623.0
theme_override_styles/normal = SubResource("StyleBoxTexture_744d7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dvisc")
text = "Enter the Dungeon"

[node name="Upgrades" type="Button" parent="ButtonManager"]
custom_minimum_size = Vector2(200, 86)
layout_mode = 0
offset_left = 854.0
offset_top = 467.0
offset_right = 1054.0
offset_bottom = 554.0
theme_override_styles/normal = SubResource("StyleBoxTexture_kl3t2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m48tj")
theme_override_styles/hover = SubResource("StyleBoxTexture_jex3y")
text = "Upgrades"

[node name="SignOut" type="Button" parent="ButtonManager"]
custom_minimum_size = Vector2(200, 86)
layout_mode = 0
offset_left = 97.0
offset_top = 467.0
offset_right = 297.0
offset_bottom = 554.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ynupv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ab04i")
text = "Sign Out"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 165.0
offset_bottom = 50.0

[node name="Username" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Coins" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="ButtonManager/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="ButtonManager/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="ButtonManager/SignOut" to="." method="_on_sign_out_pressed"]
